--- a/css/style.css
+++ b/css/style.css
@@ -773,7 +773,7 @@ input{
 /*---------------------------------------------------------------------------
 ------------------------------------DESKTOP-----------------------------------
 ----------------------------------------------------------------------------*/
-@media  (min-width: 761px){
+@media screen and (min-width: 761px){
 	.wrapper{
 		max-width: 1200px;
 	}
