--- a/css/style.css
+++ b/css/style.css
@@ -1,956 +1,16 @@
-*{
-	margin:0;
-	padding:0;
-}
-.clearfix:after{
-	content: " ";
-	display: block;
-	clear:both;
-}
-.wrapper{
-	width:100%;
-	max-width: 640px;
-	min-width: 640px;
-	margin:auto;
-	font-family: "Arial";
-}
-.style-for-buttons{
-	color:#fff;
-	text-transform: uppercase;
-	background-color: #fd926d;
-	border:none;
-}
-/*-----------------------HEADER--------------------------*/
-header{
-	text-transform: uppercase;
-	font-size: 30px;
-}
-.tlf{ 
-	display:block;
-	text-align: center;
-	color:#838383;
-	padding: 32px 0;
-}
-.tools{
-	background: #000;
-	color:#fff;
-}
-.currency{
-	display: inline-block;
-	border-right:1px solid #444444;
-	padding:30px 0 25px 30px;
-	box-sizing: border-box;
-}
-.currency:after{
-	content:url(../img/iPhone/drop.png);
-	padding-right: 25px;
-}
-.acc{
-	display:inline-block;
-	border-right:1px solid #444444;
-	padding:20px 60px 22px 0;
-}
-.acc a{
-	text-decoration: none;
-	color:#fff;
-}
-.acc:before{
-	content:url(../img/iPhone/acc.png);
-	padding:0 15px 0 60px;
-}
-.search img{
-	padding-left:25px;
-}
-.logo{
-	margin:60px 140px 68px;
-}
-.banner, .menu-for-desktop{
-	display:none;
-}
-
-/*-------------------USEFULL STUFF BEFORE MAIN--------------*/
-/*---------------CART--------------*/
-.prev-cart{
-	display: none;
-}
-.cart{
-	width:608px;
-	height:96px;
-	margin:auto;
-	background: #fafafa;
-	border:1px solid #b3b3b3;
-	box-sizing: border-box;
-}
-.cart span{
-	text-transform: uppercase;
-	font-size: 30px;
-	float:right;
-	color:#949393;
-	padding:35px 30px 40px 0;
-}
-.cart img{
-	padding:22px 0 24px 30px ;
-}
-
-/*------------MENU ACCORDION---------------------*/
-.menu{
-	margin:25px 15px;
-}
-input{
-	display: none;
-}
-.menu label{
-	font-size:30px;
-	color:#fff;
-	padding:35px 0 0 30px;
-	text-transform: uppercase;
-	width:610px;
-	height:98px;
-	margin:auto;
-	background: #fd926d;
-	display: block;
-	cursor: pointer;
-	box-sizing: border-box;
-}
-.menu label:after{
-	content: url(../img/iPhone/burger.png);
-	float:right;
-	padding-right:30px;
-}
-.menu article{
-	height:0;
-	overflow: hidden;
-}
-.menu input:checked ~ article{
-	height:160px;
-}
-/*-------------- MAIL DISTIBUTION-------------*/
-.send-mail{
-	width:610px;
-	height:100px;
-	margin:auto;
-}
-.send-mail input{
-	font-size: 30px;
-	color:#9f9f9f;
-	background: #ededed;
-	display: inline-block;
-	border: none;
-	width:510px;
-	height: 100px;
-	padding-left: 30px;
-	box-sizing: border-box;
-}
-.send-mail label{
-	display: none;
-}
-.send-button{
-	border-bottom: 8px solid #dd6b44;
-	width:100px;
-	height: 100px;
-	float:right;
-	font-size: 70px;
-	font-weight: bold;
-}
-/*----CONTACTS-----*/
-.social-tools{
-	width: 450px;
-	margin:25px auto;
-	display:block;
-	box-sizing: border-box;
-}
-.social-tools p{
-	display: inline-block;
-	font-size: 26px;
-	padding-right:30px; 
-	color:#6c6c6c;
-	vertical-align: 100%;
-}
-.social-networks{
-	display:inline-block;
-	font-size:0px;
-}
-.news{
-	display: none;
-}
-/*----------------------MAIN PART------------------------------*/
-/*-------HOT-----*/
-.main{
-	text-transform: uppercase;
-}
-.designers, .featured, .latest{
-	display: none;
-}
-.assort-category{
-	width:100%;
-	margin:25px 15px;
-}
-.main input{
-	display: none;
-}
-.assort-category label{
-	font-size:30px;
-	color:#fff;
-	padding:35px 0 0 30px;
-	height:98px;
-	margin:auto;
-	background: #f4845d;
-	display: block;
-	cursor: pointer;
-	box-sizing: border-box;
-}
-.assort-category label:after{
-	content: url(../img/iPhone/drop.png);
-	float:right;
-	padding-right:30px;
-}
-.assort-category article{
-	height:0;
-	overflow: hidden;
-	background: #fd926d;
-	box-sizing: border-box;
-}
-.assort-category input:checked ~ article{
-	height:675px;
-}
-.item-for-mobile{
-	display: inline-block;
-}
-.item-for-tablet, .item-for-pc{
-	display: none;
-}
-.item-hot-1{
-	margin:35px 17.5px 0 30px;
-	width:275px;
-	background: #f7f7f7;
-	text-align: center;
-	color:#373737;
-}
-.item-hot-2{
-	float:right;
-	margin:35px 20px 0 17.5px; 
-	width:275px;
-	background: #f7f7f7;
-	text-align: center;
-	color:#373737;
-}
-.add-item{
-	border-bottom: 8px solid #dd6b44;
-	margin: 0 10px 30px 0 ;
-}
-.add-item p{
-	padding:20px 75px 0 10px;
-	font-size: 20px;
-}
-.add-item:after{
-	content:"+";
-	font-size: 40px;
-	font-weight: bold;
-	float:right;
-	padding-right:20px;
-	margin-top: -40px;
-}
-.load-more{
-	display:block;
-	margin:30px auto;
-	height:60px;
-	width:220px;
-	background: #000;	
-	border:none;
-	text-transform: uppercase;
-	color:#fff;
-	font-size: 20px;
-}
-.price{
-	font-size: 28px;
-}
-.name{
-	font-size: 18px;
-}
-/*----------SALE-----------*/
-.off-img{
-	background: url(../img/iPhone/off.png);
-	height:157px;
-}
-.item-sale-1{
-	margin:35px 17.5px 0 30px;
-	width:250px;
-	background: #f7f7f7;
-	text-align: center;
-	color:#373737;
-	display: inline-block;
-}
-.item-sale-2{
-	float:right;
-	margin:35px 20px 0 17.5px; 
-	width:250px;
-	background: #f7f7f7;
-	text-align: center;
-	color:#373737;
-	display: block;
-}
-/*-------------------INFORMATION AFTER MAIN-----------*/
-.fav-brands, .about-lookshop, .available-cards{
-	display: none;
-}
-/*------------------FOOTER----------------------------*/
-.footer-menu{
-	display: none;
-}
-.copyright{
-	background: #000;
-}
-.copyright ul{
-	display: none;
-}
-.copyright span{
-	text-align:right;
-	font-family: "Arial";
-	color:#8d8d8d;
-	float:right;
-	font-size:24px;
-	padding:25px 30px 30px 0;
-}
-.open-nav{
-	background: #000;
-	border:none;
-	display: inline-block;
-	padding:40px 0 0 30px;
-}
-/*--------------------------------------------------------------------------
----------------------------------------------------------------------------
-------------------------------------MEDIA QUERIES--------------------------
-----------------------------------------------------------------------------
----------------------------------------------------------------------------*/
-
-/*---------------------------------------------------------------------------
-------------------------------------IPAD-----------------------------------
-----------------------------------------------------------------------------*/
-@media  (min-width: 640px){
-	.wrapper{
-		max-width: 760px;
-	}
-	/*------------------HEADER---------------------*/
-	header{
-		text-transform: uppercase;
-		font-size: 11px;
-		background: #000;
-	}
-	.tlf{ 
-		display: inline-block;
-		color:#fff;
-		padding: 10px 0 10px 15px;
-	}
-	.tools{
-		float:right;
-		padding:5px 0 10px 0;
-	}
-	.tools img{
-		height:10px;
-	}
-	.currency{
-		border-left:1px solid #444444;
-		padding:0 10px 0px 20px;
-	}
-	.currency:after{
-		content:url(../img/iPad/drop.png);
-		padding-right: 5px;
-	}
-	.acc{
-		display:inline-block;
-		border-right:1px solid #444444;
-		padding:0 15px;
-	}
-	.acc a{
-		text-decoration: none;
-		color:#fff;
-	}
-	.acc:before{
-		content:url(../img/iPad/acc.png);
-		padding:0 10px 0 0;
-	}
-	.search img{
-		padding:0 25px 0px 5px;
-	}
-	/*----------LOGO+BANNER---------------*/
-	.logo{
-		margin:45px 15px;
-		height: 35px;
-	}
-	.banner{
-		margin: 20px 0 55px 0;
-		display:block;
-		height:350px;
-		background: url('../img/iPad/banner.jpg');
-	}
-	.ban-btn{
-		width:115px;
-		height:40px;
-		border-bottom:4px solid #dd6b44;
-		margin:255px 0 0 125px;
-		}
-	.ban-ctrl{
-		width:30px;
-		height:115px;
-		display:block;
-		margin-top: 15%;
-	}
-	.previous{
-		background: url(../img/iPad/ban-ctrl-previous.png);
-		float:left;
-	}
-	.next{
-		background: url(../img/iPad/ban-ctrl-next.png);
-		float:right;
-	}
-	.ban-move-part{
-		display: inline-block;
-		margin: auto;
-	}
-	.menu-for-desktop{
-	display:none;
-}
-/*-------------------USEFULL STUFF BEFORE MAIN--------------*/
-/*---------------CART--------------*/
-.cart-all{
-	float:right;
-	border:1px solid #b3b3b3;
-	margin:20px 15px;
-}
-.prev-cart{
-	display: block;
-	width:210px;
-	height:30px;
-	border-bottom:1px solid #b3b3b3;
-	color:#949393;
-	font-size: 12px;
-	padding:8px;
-	box-sizing: border-box;
-}
-.cart{
-	width:210px;
-	height:30px;
-	border: none;
-}
-.cart span{
-	font-size: 11px;
-	padding:8px;
-}
-.cart img{
-	height: 20px;
-	padding:5px 10px;
-}
-
-/*------------MENU ACCORDION-------------------*/
-.menu{
-	margin:0 15px;
-}
-.menu label{
-	font-size:18px;
-	padding:15px 10px;
-	width:730px;
-	height:45px;
-}
-.menu label:after{
-	content: url(../img/iPad/burger.png);
-	float:right;
-	padding-right:30px;
-}
-
-.communication{
-	display: inline-block;
-	background: #ededed;
-	width:100%;
-	margin: auto;
-}
-/*-------- MAIL DISTIBUTION----------*/
-.send-mail{
-	width:285px; /*!!!!!!!!!!!!!!!!!!!!!!*/
-	height:30px;
-	margin:20px 0;
-	display:inline-block;
-}
-.send-mail input{
-	font-size: 12px;
-	background: #fff;
-	width:130px;
-	height: 30px;
-	padding-left:10px;
-	font-style: italic;
-}
-.send-mail label{
-	display: inline-block;
-	margin:0 10px 0 16px ;
-	color:#6b6b6b;
-}
-.send-button{
-	border-bottom: 2px solid #dd6b44;
-	width:30px;
-	height: 30px;
-	float:right;
-	font-size: 20px;
-	font-weight: bold;
-}
-/*---------------CONTACTS-----*/
-.social-tools{
-	width: 245px;
-	margin:5px 0 0 0;
-	float: right;
-}
-.social-tools p{
-	display: inline-block;
-	font-size: 12px;
-	padding-right:0; 
-	color:#6c6c6c;
-	vertical-align: 150%;
-
-}
-.social-networks img{
-	height:55px;
-}
-.news{
-	display: block;
-	margin: 35px auto;
-}
-/*----------------------MAIN PART------------------------------*/
-/*-------HOT-----*/
-.sale-icon:before{
-	content: url(../img/iPad/sale.png);
-	position: absolute;
-}
-.items{
-	display: inline-block;
-}
-.items img{
-	max-width: 100%;
-	height:290px;
-}
-.designers , .featured , .latest {
-	display: inline-block;
-}
-.assort-category{
-	width:100%;
-	margin:0;
-}
-.item-for-tablet:hover::before{
-	content:url(../img/iPad/shopit-hover.png);
-	position: absolute;
-	margin:100px 0 0 50px;
-}
-.main input{
-	display: none;
-}
-.assort-category label{
-	width:140px;
-	height:50px;
-	font-size:15px;
-	padding:20px 0 0 20px;
-	margin:0;
-}
-.assort-category label:after{
-	content: ' ';
-}
-.assort-category input:checked ~ article{
-	height:100%;
-}
-.item-for-tablet{
-	display: inline-block;
-}
-.item-for-mobile, .item-for-pc{
-	display: none;
-}
-.item-hot-3, .item-hot-4, .item-hot-5{
-	display: inline-block;
-	margin:20px 15px;
-	width:220px;
-	background: #f7f7f7;
-	text-align: center;
-	color:#373737;
-}
-.add-item{
-	border-bottom: 4px solid #dd6b44;
-	margin: 0 10px 30px 0 ;
-}
-.add-item p{
-	padding:10px;
-	padding-right: 30px;
-	font-size: 15px;
-}
-.add-item:after{
-	content:"+";
-	font-size: 30px;
-	font-weight: bold;
-	float:right;
-	padding-right:10px;
-	margin-top: -35px;
-}
-.load-more{
-	display: none;
-}
-.price{
-	font-size: 22px;
-}
-.name{
-	font-size: 12px;
-}
-/*----------SALE-----------*/
-.off-img{
-	background: url(../img/iPad/off.png);
-	height:193px;
-}
-.item-sale-3, .item-sale-4, .item-sale-5{
-	margin:0 10px 30px;
-	width:220px;
-	background: #f7f7f7;
-	text-align: center;
-	color:#373737;
-	display: inline-block;
-}
-/*-------------------INFORMATION AFTER MAIN-----------*/
-/*-----FAVOURITE BRANDS----*/
-.fav-brands, .about-lookshop, .available-card{
-	display:block;
-}
-.fav-brands{
-	height: 120px;
-	width: 100%;
-	border-bottom: 1px solid #d8d8d8;
-}
-.brands-title{
-	text-align: center;
-	text-transform: uppercase;
-	color:#414141;
-	font-size: 15px;
-	overflow: hidden;
-}
-.brands-title:before,
-.brands-title:after {
-  content: '';
-  display: inline-block;
-  vertical-align: middle;
-  width: 100%;
-  height: 1px;
-  background: #d8d8d8;
-}
-.brands-title:before{
-	margin-left: -100%;
-}
-.brands-title:after{
-	margin-right: -100%;
-}
-.fbrands{
-	background: url(../img/iPad/fav-brands.png);
-	width:530px;
-	height: 57px;
-	margin:15px auto;
-}
-/*----ABOUT LOOKSHOP-----------*/
-.about-lookshop{
-	text-align: center;
-	margin: 30px 0;
-}
-.about-lookshop h1{
-	font-weight:normal;
-	color:#414141;
-	font-size: 24px;
-}
-.about-lookshop p{
-	padding-top:20px;
-	color:#999999;
-	font-size: 14px;
-}
-.available-cards{
-	background: #f7f7f7;
-	width:100%;
-	display: inline-block;
-	padding-left: 100px;
-	box-sizing: border-box;
-}
-.available-cards p{
-	display: inline-block;
-	vertical-align: 150%;
-	color:#999;
-	font-size: 12px;
-	padding-right: 15px;
-}
-.available-cards img{
-	margin:20px auto 15px;
-}
-/*------------------FOOTER----------------------------*/
-.open-nav{
-	display:none;
-}
-.footer-menu{
-	display: inline-block;
-	background: #ededed;
-	width:100%;
-	padding:35px 0 0 15px;
-	box-sizing: border-box;
-}
-.footer-menu h4{
-	color: #544f4d;
-}
-.footer-menu-links{
-	width:310px;
-	display: inline-block;
-
-}
-.footer-menu-links ul{
-	display: inline-block;
-	vertical-align: top;
-	padding:0 10px 30px 0;
-
-}
-.footer-menu-links li{
-	list-style-type: none;
-}
-
-.footer-menu-links a{
-	text-decoration: none;
-	color:#8b8887;
-	font-size: 12px;
-}
-.footer-menu-social{
-	width:125px;
-	display: inline-block;
-	vertical-align: top;
-	padding-left: 70px;
-}
-.footer-menu-social a{
-	display: inline-block;
-	width: 35px;
-	height: 34px;
-}
-.footer-social-twitter{
-	background: url('../img/iPad/social-sprite.png') no-repeat 0 0;
-}
-.footer-social-pinterest{
-	background: url('../img/iPad/social-sprite.png') no-repeat -45px 0;
-}
-.footer-social-facebook{
-	background: url('../img/iPad/social-sprite.png') no-repeat -90px 0;
-}
-.footer-social-google{
-	background: url('../img/iPad/social-sprite.png') no-repeat 0 -43px;
-}
-.footer-social-tumblr{
-	background: url('../img/iPad/social-sprite.png') no-repeat -46px -43px;
-}
-.footer-social-vimeo{
-	background: url('../img/iPad/social-sprite.png') no-repeat -91px -43px;
-}
-.footer-menu img{
-	vertical-align: top;
-	padding-left: 65px;
-}
-/*-----copyright----*/
-.copyright span{
-	font-size:11px;
-	padding:25px 15px;
-}
-.copyright ul{
-	display: inline-block;
-}
-.copyright li{
-	display: inline-block;
-	list-style-type: none;	
-	margin:35px 10px 0;
-	padding-right: 10px;
-	border-right:1px solid #8d8d8d;
-}
-.copyright li:last-child{
-	border: none;
-}
-.copyright li:first-child{
-	padding-left: 15px;
-
-}
-.copyright a{
-	text-decoration: none;
-	color:#8d8d8d;
-	font-size: 11px;
-}
-/*---------------------------------------------------------------------------
-------------------------------------DESKTOP-----------------------------------
-----------------------------------------------------------------------------*/
-@media screen and (min-width: 761px){
-	.wrapper{
-		max-width: 1200px;
-	}
-	/*------------------HEADER---------------------*/
-	.tlf{ 
-		padding: 10px 0 10px 115px;
-	}
-	.tools{
-		padding:5px 115px 10px 0;
-	}
-	/*----------LOGO+BANNER---------------*/
-	.logo{
-		margin:40px 0 40px 115px;
-	}
-	.menu{
-		display: none;
-	}
-	.menu-for-desktop{
-		display:inline-block;
-		vertical-align: top;
-		padding-top: 50px;
-		margin-left:150px;
-	}
-
-	.menu-for-desktop li{
-		list-style-type: none;
-		display:inline-block;
-	}
-	.menu-for-desktop a{
-		text-decoration: none;
-		color:#000;
-		padding-right: 30px;
-	}
-	.menu-for-desktop a:after{
-		content: url(../img/desktop/arrow.png)
-	}
-	.banner{
-		height:440px;
-		background: url('../img/desktop/banner.jpg');
-	}
-	.ban-btn{
-		width:160px;
-		height:50px;
-		margin:305px 0 0 275px;
-		}
-	/*-------------------USEFULL STUFF BEFORE MAIN--------------*/
-	/*---------------CART--------------*/
-	.cart-all{
-		margin:20px 115px 0 0;
-		}
-	/*-------- MAIL DISTIBUTION----------*/
-	.send-mail{
-		width:257px; /*!!!!!!!!!!!!!!!!!!!!!!*/
-		margin:20px 0 0 130px;
-	}
-	.send-mail label{
-		font-size: 12px;
-		margin:0 10px 0 10px ;
-	}
-	/*---------------CONTACTS-----*/
-	.social-tools{
-		width: 245px;
-		margin:5px 130px 0 0;
-	}
-	.news{
-		display: block;
-		margin: 35px auto;
-		height:340px;
-	}
-	/*----------------------MAIN PART------------------------------*/
-	/*-------HOT-----*/
-	.sale-icon:before{
-		content: url(../img/iPad/sale.png);
-		position: absolute;
-	}
-
-	.item-for-tablet:hover::before, .item-for-pc:hover::before{
-		content:url(../img/iPad/shopit-hover.png);
-		position: absolute;
-		margin:100px 0 0 50px;
-	}
-	.assort-category label{
-		width:140px;
-		height:50px;
-		font-size:15px;
-		padding:20px 0 0 20px;
-		margin-left:130px;
-	}
-
-	.item-for-tablet, .item-for-pc{
-		display: inline-block;
-		}
-	.item-for-mobile{
-		display: none;
-	}
-	.item-hot-3, .item-hot-4, .item-hot-5, .item-hot-6{
-		display: inline-block;
-		margin:20px 15px;
-		width:220px;
-		background: #f7f7f7;
-		text-align: center;
-		color:#373737;
-	}
-	/*----------SALE-----------*/
-	.sale{
-		width:970px;
-		margin: auto;
-	}
-	.off-img{
-		background: url(../img/desktop/off.png);
-		height:157px;
-	}
-	.item-sale-3, .item-sale-4, .item-sale-5, .item-sale-6{
-		margin:10px 5px 30px;
-		width:220px;
-		background: #f7f7f7;
-		text-align: center;
-		color:#373737;
-		display: inline-block;
-	}
-	/*-------------------INFORMATION AFTER MAIN-----------*/
-	/*-----FAVOURITE BRANDS----*/
-	.fav-brands, .about-lookshop, .available-card{
-		display:block;
-	}
-	.fav-brands{
-		height: 120px;
-		width: 100%;
-		border-bottom: 1px solid #d8d8d8;
-	}
-	.fbrands{
-		background: url(../img/desktop/fav-brands.png);
-		width:979px;
-		height: 57px;
-		margin:15px auto;
-	}
-	/*----ABOUT LOOKSHOP-----------*/
-	.about-lookshop{
-		text-align: center;
-		margin: 30px 130px;
-	}
-	.available-cards{
-		padding-left: 100px;
-	}
-	.available-cards p{
-		padding-left:200px;
-	}
-	.available-cards img{
-		margin:20px auto 15px;
-	}
-	/*------------------FOOTER----------------------------*/
-	.open-nav{
-		display:none;
-	}
-	.footer-menu-links{
-		width:640px;
-		margin-left: 130px;
-	}
-	.footer-menu img{
-		vertical-align: top;
-		padding-left: 65px;
-	}
-	.footer-menu-links ul{
-	padding:0 35px 30px 0;
-	}
-	.footer-menu-social{
-	padding-left:0px;
-	}
-
-	/*-----copyright----*/
-	.copyright span{
-	padding:25px 130px 25px 0;
-	}
-	.copyright li:last-child{
-		border: none;
-	}
-	.copyright li:first-child{
-		padding-left: 130px;
-	}
-}
+@import url('https://fonts.googleapis.com/css?family=Chilanka|Manjari&display=swap');
+:root{
+    font-family: 'Manjari', sans-serif;
+}
+/* body{  
+    background-image:url(../img/background-small.jpg); 
+    background-size: cover;
+    background-attachment: fixed; 
+    padding:0px;
+    margin:0px;
+}
+@media(min-width:426px){
+    body{
+      background-image:url(../img/background.jpg); 
+    }
+  } */
