--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Chilanka|Manjari&display=swap');
-:root{
-    font-family: 'Manjari', sans-serif;
+
+:root {
+  font-family: 'Manjari', sans-serif;
 }
-/* body{  
-    background-image:url(../img/background-small.jpg); 
-    background-size: cover;
-    background-attachment: fixed; 
-    padding:0px;
-    margin:0px;
+
+/*-------GENERAL STYLES FROM THE UI KIT-----------*/
+.button__primary {
+  background-color: #630D64;
+  color: #FFFFF6;
+  font-family: 'Manjari', sans-serif;
+  padding: 0.75em 2em;
+  border-radius: 16px;
+  border: none;
+  
+
 }
-@media(min-width:426px){
-    body{
-      background-image:url(../img/background.jpg); 
-    }
-  } */
