--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,11 @@
 }
 
 /*-------GENERAL STYLES FROM THE UI KIT-----------*/
-.button__primary {
+.button__secondary {
   background-color: #630D64;
   color: #FFFFF6;
   font-family: 'Manjari', sans-serif;
   padding: 0.75em 2em;
   border-radius: 16px;
   border: none;
-  
-
 }
